--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/SadafShahid13/CI_CD-Lab_01/issues"
   },
-  "homepage": "https://github.com/SadafShahid13/CI_CD-Lab_01#readme"
+  "homepage": "https://github.com/SadafShahid13/CI_CD-Lab_01#readme",
+  "dependencies": {
+    "y": "^0.3.2"
+  }
 }
