--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SadafShahid13/CI_CD-Lab_01#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "y": "^0.3.2"
   }
 }
